--- a/index.html
+++ b/index.html
@@ -4,58 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="header">
+      <h1>Search Events</h1>
+    </div>
     <div class="container">
-      <div class="container-content">
-        <h2>Event I</h2>
-        <p>Number of available seats: 23</p>
+      <div class="events">
+        <h2>Event 1</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
       </div>
-
-      <div class="main-container">
-        <div class="image-container">
-          <img src="./img/challenges.jpg" alt="Event Image" class="img" />
+      <div class="events">
+        <h2>Event 2</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
         </div>
 
-        <div class="form-container">
-          <form>
-            <div class="form-group">
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="name" required />
-            </div>
-
-            <div class="form-group">
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-
-            <div class="form-group">
-              <label for="phone">Phone No.:</label>
-              <input type="tel" id="phone" name="phone" />
-            </div>
-
-            <div class="form-group">
-              <label for="seats">Number of seats:</label>
-              <input
-                type="number"
-                id="seats"
-                name="seats"
-                min="1"
-                max="23"
-                required
-              />
-            </div>
-
-            <div class="form-group">
-              <label for="attendee2">Name of Attendee 2:</label>
-              <input type="text" id="attendee2" name="attendee2" />
-            </div>
-
-            <button type="submit">Submit</button>
-            <button type="reset" class="cancel-button">Cancel</button>
-          </form>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
+      </div>
+      <div class="events">
+        <h2>Event 3</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
         </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 0</p>
+        <a href="#">Sold Out</a>
+      </div>
+      <div class="events">
+        <h2>Event 4</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
+      </div>
+      <div class="events">
+        <h2>Event 5</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
+      </div>
+      <div class="events">
+        <h2>Event 6</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
+      </div>
+      <div class="events">
+        <h2>Event 7</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 0</p>
+        <a href="#">Sold Out</a>
+      </div>
+      <div class="events">
+        <h2>Event 8</h2>
+        <div class="img-box">
+          <img src="./img/challenges.jpg" alt="" height="150px" width="150px" />
+        </div>
+        <h3>23 May-2022</h3>
+        <p>Seats Available: 23</p>
+        <a href="#">Book Now</a>
       </div>
     </div>
   </body>
